--- a/client/src/css/layout/navbar.css
+++ b/client/src/css/layout/navbar.css
@@ -1,7 +1,11 @@
-.navKanban{
+.navKanban {
     display: table-row;
     position: fixed;
     right: 0;
     left: 0;
     top: 0;
+}
+
+.mt {
+    margin-top: 8px;
 }
