--- a/client/src/css/layout/workspace.css
+++ b/client/src/css/layout/workspace.css
@@ -1,5 +1,5 @@
 .cardw-side {
-  margin-top: 100px;
+  margin-top: 10px;
   height: 100px;
 }
 
@@ -7,3 +7,5 @@
   border: 1px solid black;
   height: 30;
 }
+
+.side {}
