--- a/client/src/css/layout/navbar.css
+++ b/client/src/css/layout/navbar.css
@@ -1,9 +1,9 @@
 .navKanban {
-    display: table-row;
     position: fixed;
     right: 0;
     left: 0;
     top: 0;
+    z-index: 100;
 }
 
 .mt {
